change server domain to 0.0.0.0

--- a/cmd/xgo/test-explorer/index.html
+++ b/cmd/xgo/test-explorer/index.html
@@ -10,7 +10,7 @@
         window.onload = function(){
             const {renderReact,UrlXgoTestingExplorer} = Open
             renderReact(root,UrlXgoTestingExplorer,{
-                apiPrefix:"http://localhost:8080"
+                apiPrefix:"http://0.0.0.0:8080"
             })
         }
     </script>
