test-explorer: add background-color

--- a/cmd/xgo/test-explorer/index.html
+++ b/cmd/xgo/test-explorer/index.html
@@ -16,7 +16,7 @@
     </script>
 </head>
 <body style="height: 100%;">
-    <div id="root" style="height: 100%;"></div>
+    <div id="root" style="height: 100%; background-color: #F6F7F9;"></div>
 </body>
 <!--after body because document.body may be null-->
 <!--available in CN and Global-->
