--- a/cmd/xgo/test-explorer/index.html
+++ b/cmd/xgo/test-explorer/index.html
@@ -10,7 +10,7 @@
         window.onload = function(){
             const {renderReact,UrlXgoTestingExplorer} = Open
             renderReact(root,UrlXgoTestingExplorer,{
-                apiPrefix:"http://localhost:8080"
+                apiPrefix: "http://localhost:8080"
             })
         }
     </script>
@@ -20,6 +20,7 @@
 </body>
 <!--after body because document.body may be null-->
 <!--available in CN and Global-->
-<script src="https://cdn.jsdelivr.net/npm/xgo-explorer@0.0.9/index.js"></script>
-<!-- <script src="http://127.0.0.1:8081/npm-publish/index.js"></script> -->
+<script src="https://cdn.jsdelivr.net/npm/xgo-explorer@0.0.11/index.js"></script>
+<!-- <script src="http://127.0.0.1:8080/build/index.js"></script> -->
+<!-- <script src="http://127.0.0.1:8080/npm-publish/index.js"></script> -->
 </html>
