--- a/cmd/xgo/test-explorer/index.html
+++ b/cmd/xgo/test-explorer/index.html
@@ -20,7 +20,7 @@
 </body>
 <!--after body because document.body may be null-->
 <!--available in CN and Global-->
-<script src="https://cdn.jsdelivr.net/npm/xgo-explorer@0.0.11/index.js"></script>
-<!-- <script src="http://127.0.0.1:8080/build/index.js"></script> -->
+<script src="https://cdn.jsdelivr.net/npm/xgo-explorer@0.0.12/index.js"></script>
+<!-- <script src="http://127.0.0.1:8080/build/index.js"></script> --> <!--for local dev-->
 <!-- <script src="http://127.0.0.1:8080/npm-publish/index.js"></script> -->
 </html>
